<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reading_tips"
            android:icon="@drawable/readingmenu"
            android:title="@string/menu_reading_tips" />
        <item
            android:id="@+id/nav_speaking_tips"
            android:icon="@drawable/speakingmenu"
            android:title="Speaking Tips" />
        <item
            android:id="@+id/nav_listening_tips"
            android:icon="@drawable/listenungmenu"
            android:title="Listening Tips" />
        <item
            android:id="@+id/nav_writing_tips"
            android:icon="@drawable/writingicon"
            android:title="Writing Tips" />

    </group>

    <item android:title="Share This App With Friends">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="Feedback" />
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="Sign Out" />
        </menu>
    </item>

</menu>
